# invaders_resurrection

./: .clang-format  .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  configure.in  plan.org
data/: Makefile.am  data.mk  gfxgen.sh  invaders.def  invaders.gfx.deflate  pearl_8x8.dat.deflate
data/pov/: Makefile.am  all.inc  bomber_1.ini  bomber_1.pov  bomber_2.ini  bomber_2.pov  bomber_3.ini  bomber_3.pov  light.pov  missile.ini  missile.pov  player.ini  player.pov  ufo.ini  ufo.pov
mk/: epilogue.mk  prologue.mk
src/: Makefile.am
src/gfxgen/: Makefile.am  README  README.md  all.h  clip.c  clip.h  colors.c  colors.h  colours.c  colours.h  crop.c  crop.h  def.c  def.h  error.h  ff.c  ff.h  ff_targa.c  ff_targa.h  gfx_write.c  gfx_write.h  gfxgen.mk  image.c  image.h  main.c  scale.c  scale.h
src/invaders/: Makefile.am  all.h  armada.c  armada.h  bomber.c  bomber.h  collision.c  collision.h  defs.h  dg.c  dg.h  error.c  error.h  gfx.c  gfx.h  gids.h  groups.h  invaders.mk  joy.h  main.c  missiles.c  missiles.h  mystery.c  mystery.h  player.c  player.h  prim.c  prim.h  runlevel.c  runlevel.h  screenshot.c  screenshot.h  sfx.c  sfx.h  shields.c  shields.h  shot.c  shot.h  snap.c  snap.h  (+12 more)
src/libgfx/: Makefile.am  README  README.md  gfx_common.c  gfx_common.h  gfx_decode.c  gfx_decode.h  gfx_object.c  gfx_object.h  gfx_read.c  gfx_read.h  libgfx.h  libgfx.mk  msb.c  msb.h
src/libmedia/: README.md  libmedia.c  libmedia.h  libmedia.mk  libmedia_common.c  libmedia_sdl2.c
src/libsynth/: Makefile.am  README  README.md  libsynth.h  libsynth.mk  synth.c  synth.h  synth_neo.c  synth_sdl.c
src/libutil/: clamp.h  color.h  endian.h  libutil.mk  prng.c  prng.h  xmath.h
src/tools/: Makefile.am  btoc.c  compress.c  tools.mk
